src/test/ui/const-generics/issue-93647.stderr
error[E0277]: the trait bound `[closure@$DIR/issue-93647.rs:2:6: 2:8]: Fn<()>` is not satisfied
  --> $DIR/issue-93647.rs:2:5
   |
LL |     (||1usize)()
   |     ^^^^^^^^^^^^ expected an `Fn<()>` closure, found `[closure@$DIR/issue-93647.rs:2:6: 2:8]`
   |
   = help: the trait `~const Fn<()>` is not implemented for closure `[closure@$DIR/issue-93647.rs:2:6: 2:8]`
note: the trait `Fn<()>` is implemented for `[closure@$DIR/issue-93647.rs:2:6: 2:8]`, but that implementation is not `const`
  --> $DIR/issue-93647.rs:2:5
   |
LL |     (||1usize)()
   |     ^^^^^^^^^^^^
   = note: wrap the `[closure@$DIR/issue-93647.rs:2:6: 2:8]` in a closure with no arguments: `|| { /* code */ }`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
