src/test/ui/const-generics/issue-93647.rs
struct X<const N: usize = {
    (||1usize)()
    //~^ ERROR the trait bound
}>;

fn main() {}
